--- a/service.html
+++ b/service.html
@@ -64,33 +64,44 @@
     <!-- Topbar End -->
 
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="m-0 text-white"><i class="fa fa-birthday-cake fs-1 text-primary me-3"></i>Deh Deepya's Cake Factory</h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About Us</a>
-                <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-                <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu m-0">
-                        <a href="service.html" class="dropdown-item active">Our Service</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-            </div>
-        </div>
-    </nav>
-    <!-- Navbar End -->
+<!-- Navbar Start -->
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+    <!-- Brand for smaller screens -->
+    <a href="index.html" class="navbar-brand d-block d-lg-none">
+        <h3 class="m-0 fs-6 text-white">
+            <i class="fa fa-birthday-cake fs-6 text-primary me-2"></i>
+            Deh Deepya's Cake Factory
+        </h3>
+    </a>
 
+    <!-- Toggle Button for Mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar Content -->
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto mx-lg-auto py-0">
+            <!-- Navbar Links -->
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="about.html" class="nav-item nav-link">About Us</a>
+            <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+            <a href="team.html" class="nav-item nav-link">Master Chefs</a>
+
+            <!-- Dropdown Menu -->
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
+                <ul class="dropdown-menu m-0">
+                    <li><a href="service.html" class="dropdown-item">Our Service</a></li>
+                    <li><a href="testimonial.html" class="dropdown-item">Testimonial</a></li>
+                </ul>
+            </div>
+
+            <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+        </div>
+    </div>
+</nav>
+<!-- Navbar End -->
 
     <!-- Page Header Start -->
     <div class="container-fluid bg-dark bg-img p-5 mb-5">
