--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@
                     <div class="d-flex align-items-center mb-3">
                         <img class="img-fluid flex-shrink-0" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;">
                         <div class="ps-3">
-                            <h4 class="text-primary text-uppercase mb-1">Client Name</h4>
-                            <span>Profession</span>
+                            <h4 class="text-primary text-uppercase mb-1">Sneha Latha</h4>
+                            <span>House Wife</span>
                         </div>
                     </div>
                     <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
@@ -630,8 +630,8 @@
                     <div class="d-flex align-items-center mb-3">
                         <img class="img-fluid flex-shrink-0" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;">
                         <div class="ps-3">
-                            <h4 class="text-primary text-uppercase mb-1">Client Name</h4>
-                            <span>Profession</span>
+                            <h4 class="text-primary text-uppercase mb-1">PavanTej</h4>
+                            <span>Web Developer</span>
                         </div>
                     </div>
                     <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
@@ -641,8 +641,8 @@
                     <div class="d-flex align-items-center mb-3">
                         <img class="img-fluid flex-shrink-0" src="img/testimonial-3.jpg" style="width: 60px; height: 60px;">
                         <div class="ps-3">
-                            <h4 class="text-primary text-uppercase mb-1">Client Name</h4>
-                            <span>Profession</span>
+                            <h4 class="text-primary text-uppercase mb-1">Shanmuk</h4>
+                            <span>Student</span>
                         </div>
                     </div>
                     <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
@@ -652,8 +652,8 @@
                     <div class="d-flex align-items-center mb-3">
                         <img class="img-fluid flex-shrink-0" src="img/testimonial-4.jpg" style="width: 60px; height: 60px;">
                         <div class="ps-3">
-                            <h4 class="text-primary text-uppercase mb-1">Client Name</h4>
-                            <span>Profession</span>
+                            <h4 class="text-primary text-uppercase mb-1">Mani Sanakar</h4>
+                            <span>Software Developer</span>
                         </div>
                     </div>
                     <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
