--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                             <span>House Wife</span>
                         </div>
                     </div>
-                    <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                    <p class="mb-0">"The cakes from Cake Delight are a lifesaver for my family gatherings! The freshness and unique flavors are always the highlight of our celebrations. I can’t thank them enough for making our special moments even sweeter!"
                     </p>
                 </div>
                 <div class="testimonial-item bg-dark text-white border-inner p-4">
@@ -648,7 +648,9 @@
                             <span>Web Developer</span>
                         </div>
                     </div>
-                    <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                    <p class="mb-0">"Cake Delight’s stunning designs and delicious cakes have impressed my clients during office events. They truly blend taste with creativity, making them my go-to bakery for any occasion!"
+
+
                     </p>
                 </div>
                 <div class="testimonial-item bg-dark text-white border-inner p-4">
@@ -659,7 +661,7 @@
                             <span>Student</span>
                         </div>
                     </div>
-                    <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                    <p class="mb-0">"As a student, I love celebrating small victories, and Cake Delight always comes through with the most delicious cupcakes and cakes. They’re affordable, tasty, and beautifully presented every time."
                     </p>
                 </div>
                 <div class="testimonial-item bg-dark text-white border-inner p-4">
@@ -670,7 +672,7 @@
                             <span>Software Developer</span>
                         </div>
                     </div>
-                    <p class="mb-0">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                    <p class="mb-0">"After long hours of coding, a slice of Cake Delight’s chocolate fudge cake is my perfect treat. The quality and consistency are unmatched, and their delivery is always on time."
                     </p>
                 </div>
             </div>
