--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!-- Navbar Links -->
             <a href="index.html" class="nav-item nav-link active">Home</a>
             <a href="about.html" class="nav-item nav-link">About Us</a>
-            <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+            <a href="menu.html" class="nav-item nav-link">Our Menu</a>
             <a href="team.html" class="nav-item nav-link">Master Chefs</a>
 
             <!-- Dropdown Menu -->
@@ -113,7 +113,7 @@
                 <div class="col-lg-8 text-center text-lg-start">
                     <h1 class="font-secondary text-primary mb-4">Super Creamy</h1>
                     <h1 class="display-1 text-uppercase text-white mb-4">Deh Deepya's Cake Factory</h1>
-                    <h1 class="text-uppercase text-white">The Best Cake In London</h1>
+                    <h1 class="text-uppercase text-white">Get The Best Cakes In Vizag</h1>
                     
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="" class="btn btn-primary border-inner py-3 px-5 me-5">Read More</a>
@@ -248,7 +248,7 @@
     <div class="container-fluid about py-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
-                <h2 class="text-primary font-secondary">Menu & Pricing</h2>
+                <h2 class="text-primary font-secondary">Our Menu</h2>
                 <h1 class="display-4 text-uppercase">Explore Our Cakes</h1>
             </div>
             <div class="tab-class text-center">
