--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
             <!-- Navbar Links -->
             <a href="index.html" class="nav-item nav-link active">Home</a>
             <a href="about.html" class="nav-item nav-link">About Us</a>
-            <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+            <a href="menu.html" class="nav-item nav-link">Our Menu</a>
             <a href="team.html" class="nav-item nav-link">Master Chefs</a>
 
             <!-- Dropdown Menu -->
