updated menu option

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     <a href="index.html" class="navbar-brand d-block d-lg-none">
         <h3 class="m-0 fs-6 text-white">
             <i class="fa fa-birthday-cake fs-6 text-primary me-2"></i>
-            DehDeepya's Cake Factory
+            Deh Deepya's Cake Factory
         </h3>
     </a>
 
@@ -79,29 +79,21 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Navbar Content -->
+     <!-- Navbar Content -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
             <!-- Navbar Links -->
-            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About Us</a>
             <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-            <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-
-            <!-- Dropdown Menu -->
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-                <ul class="dropdown-menu m-0">
-                    <li><a href="service.html" class="dropdown-item">Our Service</a></li>
-                    <li><a href="testimonial.html" class="dropdown-item">Testimonial</a></li>
-                </ul>
-            </div>
-
-            <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+            <a href="service.html" class="nav-item nav-link">Our Service</a>
+            <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
+            <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
         </div>
     </div>
 </nav>
 <!-- Navbar End -->
+
 
 
     <!-- Page Header Start -->
