--- a/about.html
+++ b/about.html
@@ -79,29 +79,21 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Navbar Content -->
+     <!-- Navbar Content -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
             <!-- Navbar Links -->
-            <a href="index.html" class="nav-item nav-link active">Home</a>
-            <a href="about.html" class="nav-item nav-link">About Us</a>
+            <a href="index.html" class="nav-item nav-link">Home</a>
+            <a href="about.html" class="nav-item nav-link active">About Us</a>
             <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-            <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-
-            <!-- Dropdown Menu -->
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-                <ul class="dropdown-menu m-0">
-                    <li><a href="service.html" class="dropdown-item">Our Service</a></li>
-                    <li><a href="testimonial.html" class="dropdown-item">Testimonial</a></li>
-                </ul>
-            </div>
-
+            <a href="service.html" class="nav-item nav-link">Our Service</a>
+            <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
             <a href="contact.html" class="nav-item nav-link">Contact Us</a>
         </div>
     </div>
 </nav>
 <!-- Navbar End -->
+
 
 
     <!-- Page Header Start -->
@@ -172,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 ">
                     <div class="d-flex">
                         <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-users text-white"></i>
