--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Birthday Cake Image" style="max-width: auto; height: 100%;">
+                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Birthday Cake Image" style="max-width: auto; height: auto;">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-5 py-4">
                                         <h5 class="text-uppercase">Birthday Cake</h5>
@@ -269,7 +269,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Wedding Cake" style="max-width: auto; height: 100%;">
+                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Wedding Cake" style="max-width: auto; height: auto;">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-5 py-4">
                                         <h5 class="text-uppercase">Wedding Cake</h5>
@@ -281,7 +281,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Children Special Cake" style="max-width: auto; height: 100%;">
+                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Children Special Cake" style="max-width: auto; height: auto;">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-5 py-4">
                                         <h5 class="text-uppercase">Children Special Cake</h5>
@@ -293,7 +293,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Event Special Cake" style="max-width: auto; height: 100%;">
+                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Event Special Cake" style="max-width: auto; height: auto;">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-5 py-4">
                                         <h5 class="text-uppercase">Event Special Cake</h5>
@@ -305,7 +305,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Cartoon Special Cake" style="max-width: auto; height: 100%;">
+                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Cartoon Special Cake" style="max-width: auto; height: auto;">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-5 py-4">
                                         <h5 class="text-uppercase">Cartoon Special Cake</h5>
@@ -317,7 +317,7 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Wedding Cake" style="max-width: auto; height: 100%;">
+                                        <img class="img-fluid" src="img/cake-2.jpg" alt="Wedding Cake" style="max-width: auto; height: auto;">
                                     </div>
                                     <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-5 py-4">
                                         <h5 class="text-uppercase">Wedding Cake</h5>
@@ -346,40 +346,6 @@
     </div>
     <!-- Products End -->
 
-
-    <!-- Service Start -->
-    <div class="container-fluid service position-relative px-5 mt-5" style="margin-bottom: 135px;">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
-                    <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Birthday Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Wedding Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Custom Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
-                        <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-12 col-md-6 text-center">
-                    <h1 class="text-uppercase text-light mb-4">30% Discount For This Summer</h1>
-                    <a href="" class="btn btn-primary border-inner py-3 px-5">Order Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Service Start -->
 
 
     <!-- Testimonial Start -->
