--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,6 @@
     </div>
     <!-- Topbar End -->
 
-
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
     <!-- Brand for smaller screens -->
@@ -86,18 +85,9 @@
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About Us</a>
             <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-            <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-
-            <!-- Dropdown Menu -->
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-                <ul class="dropdown-menu m-0">
-                    <li><a href="service.html" class="dropdown-item">Our Service</a></li>
-                    <li><a href="testimonial.html" class="dropdown-item">Testimonial</a></li>
-                </ul>
-            </div>
-
-            <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+            <a href="service.html" class="nav-item nav-link">Our Service</a>
+            <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
+            <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
         </div>
     </div>
 </nav>
