--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                     <div class="d-flex align-items-center mb-3">
                         <img class="img-fluid flex-shrink-0" src="img/testimonial-4.jpg" style="width: 60px; height: 60px;">
                         <div class="ps-3">
-                            <h4 class="text-primary text-uppercase mb-1">Mani Sanakar</h4>
+                            <h4 class="text-primary text-uppercase mb-1">Mani Sankar</h4>
                             <span>Software Developer</span>
                         </div>
                     </div>
